--- a/README
+++ b/README
@@ -2,4 +2,8 @@
 | sociaal leefbaar massamoord land |
 ------------------------------------
 
+
+# massamoordenaar
+https://nl.wikipedia.org/wiki/Massamoordenaar
+
 bemoeigurus at work © 2002-2021
